Update exemple of use.html

--- a/exemple of use.html
+++ b/exemple of use.html
@@ -15,7 +15,9 @@
     let lo=true;
     let num=true;
     let symb=true;
+    //said lambda
     password=randpassword(lengthmin,lengthmax,up,lo,num,symb);
     console.log(password);
 </script>
+
 </html>
